# PrediccionGasMLStorage

./: README.md  pyproject.toml
data/: contracts100.csv
evaluacion/: Experimentos.ipynb  Exploracion.ipynb  Sizes.ipynb
experimentos/: build_example_strg.py  evaluate_models.py  inspect_models.py  predict_one.py  test_preprocess.py  upper_sizes.py
model/: config.env  main.py
model/config/: config.py
model/data_processing/: reader.py  storage.py
model/export/: dumper.py
model/modeling/: MyModel.py  trainer.py
model/preprocessing/: decode.py  knn.py  process.py
model/utils/: parallel_execution.py
